Opened 9 years ago

Closed 8 years ago

#12758 closed bug (fixed)

[Patch] VideoConsumer.cpp: fix gcc6 build

Reported by: mt Owned by: mmu_man
Priority: normal Milestone: Unscheduled
Component: Applications/CodyCam Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Add curly braces to fix gcc6 '-Werror=misleading-indentation' warnings.

C++ /home/haiku/haiku/haiku/generated-gcc6/objects/haiku/x86/release/apps/codycam/VideoConsumer.o 
/home/haiku/haiku/haiku/src/apps/codycam/VideoConsumer.cpp: In member function 'status_t VideoConsumer::LocalSave(char*, BBitmap*)':
/home/haiku/haiku/haiku/src/apps/codycam/VideoConsumer.cpp:678:9: error: this 'else' clause does not guard... [-Werror=misleading-indentation]
         else
         ^~~~
/home/haiku/haiku/haiku/src/apps/codycam/VideoConsumer.cpp:681:3: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'else'
   input.DetachBitmap(&bitmap);
   ^~~~~
cc1plus: all warnings being treated as errors

Attachments (1)

0012-VideoConsumer.cpp-fix-gcc6-build.patch (951 bytes ) - added by mt 9 years ago.

Download all attachments as: .zip

Change History (4)

comment:1 by mt, 9 years ago

patch: 01

comment:2 by korli, 9 years ago

Not sure I understand the braces here. Care to explain?

comment:3 by pulkomandy, 8 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev50503.

Note: See TracTickets for help on using tickets.