Fix mixed indentation

Fixes #12758.